--- a/index.css
+++ b/index.css
@@ -99,7 +99,7 @@ body{
 }
 
 #California{
-	background-image: url("images/California.JPG");
+	background-image: url("images/.JPG");
 }
 #Debate{
 	background-image: url("images/latest_debate_two.jpg");
