--- a/index.css
+++ b/index.css
@@ -99,10 +99,9 @@ body{
 
 }
 
-#California{
-	background-image: url("images/latest_debate_two.jpg");
+#California {
+  background-image: url("images/California.jpg");
 }
-
 #Debate{
 	background-image: url("images/latest_debate_two.jpg");
 }
