--- a/index.css
+++ b/index.css
@@ -100,7 +100,7 @@ body{
 }
 
 #California {
-  background-image: url("images/California.jpg");
+  background-image: url("images/California");
 }
 #Debate{
 	background-image: url("images/latest_debate_two.jpg");
