graduation photo added

--- a/index.css
+++ b/index.css
@@ -95,7 +95,7 @@ body{
 
 #snow{
     /* The image used */
-    background-image: url(/images/snow_photo.jpg);
+    background-image: url(/images/graduation.jpg);
 
 }
 
