--- a/index.css
+++ b/index.css
@@ -95,7 +95,7 @@ body{
 
 #snow{
     /* The image used */
-    background-image: url(/images/graduation.jpg);
+    background-image: url(/images/pickle.jpg);
 
 }
 
