--- a/index.css
+++ b/index.css
@@ -38,17 +38,28 @@ body{
 	filter:none;
 	display:flex;
 }
+
+.big_header{
+	filter:none;
+	color:#ffffff;
+	font-family: sans-serif;
+    font-size: 20.5vh;
+    text-shadow: 2px 2px 2px rgba(0,0,0,.3);
+    text-align: center;
+    font-weight: bold;
+}
+
+
 .header{
 	filter:none;
 	color:#ffffff;
 	font-family: sans-serif;
     font-size: 5.5vh;
     text-shadow: 2px 2px 2px rgba(0,0,0,.3);
+    text-align: center;
 }
 
-
-
-.first_panel{
+.blue_white_panel{
   display : flex;
   flex-direction: column;
   background-color:#00B2D6;
@@ -57,7 +68,7 @@ body{
   border-radius: 0
 }
 
-.third_panel{
+.orange_white_panel{
   display : flex;
   flex-direction: column;
   align-items : center;
@@ -66,17 +77,6 @@ body{
   color : #000000;
   border-radius: 0
 }
-
-.fourth_panel{
-  display : flex;
-  flex-direction: column;
-  align-items : center;
-  background-color:#FFFFFF;
-  height : 66%;
-  color : #000000;
-  border-radius: 0
-}
-
 
 .parallax {
 	display:flex;
@@ -108,6 +108,11 @@ body{
 
 #orange_color{
 	color: #FF7D01;
+    /*mix-blend-mode: difference;*/
+}
+
+#white_color{
+	color: #ffffff;
     /*mix-blend-mode: difference;*/
 }
 
