--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@ body{
     align-items: center;
 }
 
-#snow{
+#grad{
     /* The image used */
     background-image: url(/images/graduation.jpg);
 
